# SomeFunProjects

./: README.md
Matrix Rain Animation In Burmese Characters/: MatrixRainAnimationInBurmese.py  README.md
Simple Recursive Tree/: sketch.js
USB_HID_Keypad/: CMakeLists.txt  clean.bat  cmake_build.bat  flash.bat  open_ocd_run.bat
docs/: index.md
hexdump/: Makefile  hexdump  hexdump.c  tags
